make signup form on about page work

--- a/cupcakes/templates/about.html
+++ b/cupcakes/templates/about.html
@@ -19,12 +19,13 @@
         <p>Be sure to bookmark Sunlight CAM and check back frequently to share any new ads you see or hear as Election Day approaches.</p>
 
         <h3>Like Sunlight CAM? Sign up here to hear about other Sunlight projects.</h3>
-        <form action="/" method="post">
-            <input id="id_signup" type="text" value="Enter Your Email Address" name="q"/>
+        <form action="/" method="post" id="signup_form">
+            <input id="id_signup" type="text" placeholder="Enter your email address" name="email"/>
 			<button class="signupBtn" type="submit">
 				<span>Sign Up</span>
 			</button>
         </form>
+		<p id="signup_message"></p>
 		
 	</div>
 
