--- a/cupcakes/templates/about.html
+++ b/cupcakes/templates/about.html
@@ -9,7 +9,7 @@
 		<p>Sunlight Campaign Ad Monitor (Sunlight CAM) allows anyone to report information on the political advertising they see on TV, hear on the radio or view online.</p>
         <h3>Why this matters</h3>
         <p>Did you know that special interests can now spend an unlimited amount of cash to try to influence your vote with TV, radio and Internet advertising?</p>
-        <p>That’s because in January 2010, the Supreme Court changed the landscape of money and politics. <a href="http://blog.sunlightfoundation.com/2010/01/21/ citizens_united_transparenc/">To briefly recap</a>, in the Citizens United v. FEC case, the Supreme Court decided that corporations and unions may spend unlimited amounts of money on right up until Election Day, so long as they do not coordinate with candidates. The Federal Election Commission has yet to adopt final rules that will allow it to track this flood of money; that’s why we need your help.</p>
+        <p>That’s because in January 2010, the Supreme Court changed the landscape of money and politics. <a href="http://blog.sunlightfoundation.com/2010/01/21/ citizens_united_transparenc/">To briefly recap</a>, in the Citizens United v. FEC case, the Supreme Court decided that corporations and unions may spend unlimited amounts of money right up until Election Day, so long as they do not coordinate with candidates. The Federal Election Commission has yet to adopt final rules that will allow it to track this flood of money; that’s why we need your help.</p>
         <p>We created Sunlight CAM to shine a light on who is buying your time. But we need your eyes and ears. Join us and become a Sunlight Campaign Ad Monitor to report on who buys ad time in support of or against candidates running for elected office or even issues on the ballot.</p>
         <h3>How to use Sunlight CAM</h3>
         <p>When you see a political ad on TV, hear one on the radio or view one online, visit Sunlight CAM to log it and tell us more about it.</p>
@@ -18,7 +18,7 @@
         <p>You can also flag inaccurate information or abusive or offensive posts. If you see any such information, click the flag button in the View Reports page and we’ll take a look.</p>
         <p>Be sure to bookmark Sunlight CAM and check back frequently to share any new ads you see or hear as Election Day approaches.</p>
 
-        <h3>Like Sunlight CAM? Sign up here to hear about other Sunlight projects.</h3>
+        <h3>Like Sunlight CAM? Sign up here to learn about other Sunlight projects.</h3>
         <form action="/" method="post" id="signup_form">
             <input id="id_signup" type="text" placeholder="Enter your email address" name="email"/>
 			<button class="signupBtn" type="submit">
