--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -31,7 +31,8 @@
 	        <div id="nav">
 	            <ul>
 			        <li id="about"><a href="/about">About</a></li>
-			        <li id="share"><a href="/use">Share CAM</a></li>
+			        <li id="share"><a href="/share">Share CAM</a></li>
+			        <li id="usingthedata"><a href="/usingthedata">Using the data</a></li>
 			        <li><a href="/contact">Contact</a></li>
 			    </ul> 
 			    <div class="clear"></div>
