add browse link

--- a/cupcakes/templates/usingthedata.html
+++ b/cupcakes/templates/usingthedata.html
@@ -6,7 +6,7 @@
 
 	<div id="ltColumn" class="methodology">
 		<h2>Using the data</h2>
-		<p>This site collects information on the private interests that are sponsoring political advertisements across the country during the election season. The data collected is easily downloadable from the ‘View Reports’ page (LINK) as a CSV document.</p>
+		<p>This site collects information on the private interests that are sponsoring political advertisements across the country during the election season. The data collected is easily downloadable from the ‘<a href="/browse">View Reports</a>’ page as a CSV document.</p>
 		<p>For reporters, bloggers and citizens wanting to do more research on groups that are spending money to run these ads, here are a few tips:</p>
 		<ol>
 			<li>
