--- a/cupcakes/templates/use.html
+++ b/cupcakes/templates/use.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 		<h2>Share Sunlight CAM on Your Website</h2>
-		<p class="fullWidthp">Use the ads below on your website or blog to tell people about Sunlight CAM, and how they can help watchdog special interests. Simply choose the best graphic size for your site, and copy the embed code to use it.</p>
+		<p class="fullWidthp">Use the badges below on your website or blog to tell people about Sunlight CAM, and how they can help watchdog special interests. Simply choose the best graphic size for your site, and copy the embed code to use it.</p>
 		<span class="tip">For more information on how to become a Sunlight CAM partner, <a href="/contact">click here</a>.</span>
 		<ul id="ads">
 		    <li>
