--- a/cupcakes/templates/thanks.html
+++ b/cupcakes/templates/thanks.html
@@ -34,6 +34,7 @@
             </form>
 			<p id="signup_message"></p>
 		</div>
+		<img src="http://ad.doubleclick.net/activity;src=1379696;dcnet=4155;boom=41134;sz=1x1;ord=1?"width="1" height="1" border="0" alt="">
 	</div>
 	
 	<div id="rtColumn">
